feat: public projects listing page with competitions
